@@ -2,6 +2,24 @@ dependencies {
 	api project(":modules:product-rest:product-rest-api")
 
 	compileOnly group: "com.liferay.portal", name: "release.portal.api"
+	compileOnly project(":modules:product-service:product-service-api")
+
+	testImplementation group: "com.liferay.portal", name: "release.portal.api"
+	testImplementation project(":modules:product-service:product-service-api")
+	testImplementation project(":modules:product-service:product-service-service")
+	testImplementation group: "org.junit.jupiter", name: "junit-jupiter-api", version: "5.10.2"
+	testRuntimeOnly group: "org.junit.jupiter", name: "junit-jupiter-engine", version: "5.10.2"
+	testImplementation group: "org.mockito", name: "mockito-junit-jupiter", version: "5.12.0"
+	testImplementation group: "org.assertj", name: "assertj-core", version: "3.25.3"
 }
 
 group = "product.rest"
+
+test {
+	jvmArgs(
+		"--add-opens=java.base/java.lang=ALL-UNNAMED",
+		"--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+		"--add-opens=java.base/java.util=ALL-UNNAMED"
+	)
+	useJUnitPlatform()
+}
